Prevent vertical overflow on each box
Fix issue where when there is too much content vertically an overflow
occurs, to prevent this i add the overflow attrivute.

--- a/project/waiter/static/css/orderWaiter.css
+++ b/project/waiter/static/css/orderWaiter.css
@@ -54,6 +54,11 @@
   transform: rotateY(180deg);
 }
 
+/** Hide the scroll bar **/
+.order-box-back::-webkit-scrollbar {
+  display: none;
+}
+
 .title {
   font-family: Montserrat;
   font-size: 120%;
